--- a/styles/sass/layout/_navbar.scss
+++ b/styles/sass/layout/_navbar.scss
@@ -16,30 +16,25 @@
                         text-decoration: underline;
                     }
                 }
-            }
-
-            li:nth-of-type(1) {
-                font-weight: bold;
-                margin-bottom: 0.7rem;
+                &:nth-of-type(1) {
+                    font-weight: bold;
+                    margin-bottom: 0.7rem;
+                }
             }
         }
     }
-
     // MAIN TITLE
     .navbar-main-title {
         h1 {
             font-size: 7rem;
             text-transform: uppercase;
             letter-spacing: -0.5rem;
-
             span {
                 -webkit-text-stroke-width: 1px;
                 -webkit-text-stroke-color: #fff;
                 letter-spacing: -1rem;
-
                 .letter-o {
                     position: relative;
-
                     &::after {
                         content: "I";
                         position: absolute;
@@ -48,7 +43,6 @@
                         transform: rotate(90deg);
                     }
                 }
-
             }
         }
     }
@@ -58,16 +52,20 @@
         button {
             width: 120px;
             height: 80px;
-            margin-right: 2.5rem;
             border-radius: 45%;
             border: 1px solid $black;
-
             a {
                 text-decoration: none;
                 color: $black;
                 font-weight: bold;
             }
+            &:hover {
+                background-color: $black;
+                border: 1px solid $white;
+                a {
+                    color: $white;
+                }
+            }
         }
     }
 }
-
